# Hekate.py

./: README.md  temp.py
asclepius/: __init__.py  pyproject.toml  requirements.txt  setup.py  update_finder.py
asclepius/methods/: archmethod.py  provider.py
asclepius/utils/: configuration.py  http.py  version.py
documentation/schema/: config.schema.json  version.schema.json
hekate/: __init__.py  setup.py  update_finder.py
hekate/methods/: archmethod.py  google.py  wikipedia.py
hekate/utils/: html.py
